update high contrast global border bug\

--- a/client/app/globals.css
+++ b/client/app/globals.css
@@ -37,11 +37,11 @@ body,
 
 @layer base {
   
-  /* input[type="number"]::-webkit-inner-spin-button,
+  input[type="number"]::-webkit-inner-spin-button,
   input[type="number"]::-webkit-outer-spin-button {
     -webkit-appearance: none;
     margin: 0;
-  } */
+  }
   :root {
     --background: 0 0% 100%;
     --foreground: 222.2 84% 4.9%;
@@ -91,3 +91,12 @@ body,
 
 
  
+ 
+@layer base {
+  * {
+    @apply border-border;
+  }
+  body {
+    @apply bg-background text-foreground;
+  }
+}
